--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,10 @@ ul.nav-links {
     gap: 46px;
 }
 
+.nav-links::after {
+    text-decoration: dotted red;
+}
+
 .nav-header {
     margin-left: 93px;
 }
@@ -436,6 +440,32 @@ li.address-link:last-child {
     overflow: hidden;
 }
 
+.photo_index {
+    position: relative;
+}
+
+.photo_index_overlay {
+    position: absolute;
+    bottom: 0px;
+    width: 370px;
+    height: 70px;
+}
+
+.photo_index_p {
+    display: flex;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16.41px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--secondary-text-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    padding: 27px 90px;
+    justify-content: center;
+}
+
 .photo_grid:hover .overlay {
     transform: translateY(0);
 }
@@ -453,7 +483,7 @@ li.address-link:last-child {
 .overlay {
     background-color: rgba(33, 150, 243, 0.9);
     transform: translatey(100%);
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 0;
     position: absolute;
     top: 0;
@@ -616,4 +646,36 @@ li.address-link:last-child {
 .footer_flex {
     display: flex;
 }
-    
+
+.underscore-index {
+    position: relative;
+    top: 28px;
+}
+
+.underscore-index::after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 53px;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+}
+
+.underscore-portfolio {
+    position: relative;
+    top: 28px;
+}
+
+.underscore-portfolio::after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 58px;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+
+}
