--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
     --background-icon-color: #F5F4FA;
     --icon-color: rgba(175, 177, 184, 1);
     --footer-icon-color: rgba(255, 255, 255, 0.1);
+    --backdrop-color: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -24,6 +25,46 @@ body {
     letter-spacing: 0.03em;
 }
 
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--backdrop-color);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    min-height: 581px;
+    background-color: var(--secondary-text-color);
+}
+
+.close-btn {
+    display: flex;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--secondary-text-color);
+    border: 1px solid var(--backdrop-color);
+    border-radius: 50%;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+}
+
 h1,
 h2,
 h3,
@@ -31,7 +72,7 @@ h4,
 h5,
 h6,
 ul,
-p, {
+p {
     margin: 0px;
 }
 
